# retrosheet

./: .codeiumignore  .env.example  .gitignore  .sqlfluff  =1.83.0  =3.1.44  AGENTS.md  BETTING_ARBITRAGE_TEST_REPORT.md  CHATBOT_INTERFACE_DESIGN.md  COMMIT_MSG.txt  COMPREHENSIVE_PROJECT_REVIEW.md  DATABASE_MODEL_TEST_REPORT.md  DIFF_20260509_100330.md  DIFF_20260509_102128.md  DIFF_20260509_102833.md  DIFF_20260509_104323.md  Dockerfile  Dockerfile.live  GITHUB_ISSUE_CLEANUP_COMPLETE.md  LLM_INTEGRATION_EVALUATION_PLAN.md  LLM_INTEGRATION_RECOMMENDATION_PLAN.md  Makefile  PHASE_4_COMPLETION_SUMMARY.md  PROJECT_ORGANIZATION_PLAN.md  README.md  README_ENVIRONMENT_FIX.md  RECOMMENDATIONS_20260509_100330.md  RECOMMENDATIONS_20260509_102128.md  RECOMMENDATIONS_20260509_102833.md  RECOMMENDATIONS_20260509_104323.md  RELEASE_NOTES.md  agent-orchestrator.yaml  allstar_fix.txt  biome.json  clean_diagnostic.py  cli_integration_issue.md  close_old_issues.sh  dependencies_issue.md  diagnostic_findings.md  diagnostic_report.txt  (+33 more)
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md  quality-gates.yml
baseball/: __init__.py  __main__.py  cli.py  database.py  logging.py
baseball-chatbot-ui/: next.config.js  package-lock.json  package.json  tailwind.config.ts
config/: ai_providers.example.json  chadwick_event_columns.txt  models.yml  pipelines.yml  sources.yml  traefik.yml
configs/: lightgbm_contact_made.yaml  test_swing.yaml  xgboost_swing_decision.yaml
dashboard/: README.md  index.html
docs/: ADVANCED_MODELING_PLAN.md  AI_BETTING_INTEGRATION_PLAN.md  ARCHIVED_DOCUMENTATION.md  AT_BAT_OUTCOME_MODEL_REVIEW.md  BETTING_QUICKSTART.md  BRIDGE_TABLE_IMPLEMENTATION.md  BRIDGE_TABLE_RESEARCH.md  CICD_PIPELINE.md  CODERABBIT_SETUP.md  CONFIDENCE_SCORING.md  CONTRIBUTOR_ONBOARDING.md  CORE_SCHEMA.md  CRISP_DM_IMPLEMENTATION_PLAN.md  CURRENT_STATE_REVIEW.md  DATABASE_CATALOG.md  DATABASE_OPTIMIZATION_GUIDE.md  DATA_INGESTION_FIX_REPORT.md  DATA_MODELS.md  DATA_QUALITY_SLAS.md  DEPLOYMENT_PLAN.md  EDGEFORGE_TRIAGE.md  ESPN_BRIDGE_REQUIREMENTS.md  EXTENSIBLE_FRAMEWORK_DESIGN.md  FAQ.md  FEATURE_AUDIT.md  FEATURE_ENGINEERING_PLAN.md  FEATURE_STATUS_REPORT.md  FEATURE_STORE_ARCHITECTURE.md  FRAMEWORK_CONFIRMATION.md  FRAMEWORK_IMPLEMENTATION_STATUS.md  GITHUB_ISSUE_UPDATES.md  GITHUB_PROJECT_GUIDE.md  HIERARCHICAL_PREDICTION_SYSTEM.md  HPS_DATA_DICTIONARY.md  ID_RECONCILIATION.md  IMPLEMENTATION_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  ISSUE_DATABASE_OPTIMIZATION.md  KNOWLEDGE_BASE_FRAMEWORK.md  KNOWLEDGE_BASE_GIS_PITCH.md  (+80 more)
framework/: __init__.py
github_issues/: issue_01_core_llm_integration.md  issue_02_tool_execution_engine.md  issue_03_model_orchestration.md  issue_04_security_safety.md  issue_05_documentation_and_issue_linking.md  issue_05_progress_monitoring.md  issue_06_model_training_pipeline.md  issue_07_advanced_features.md  issue_08_espn_mlb_data_integration.md  issue_09_retrosheet_comprehensive_data_acquisition.md  issue_10_statcast_pitch_level_data_ingestion.md
mlb_predict/: __init__.py
models/: training_summary.json
prompts_for_codex/: HOW_TO_USE_WITH_CODEX.md  MASTER_INDEX.md  PHASE_1_AUDIT.md  PHASE_1_AUDIT_AND_QUESTIONS.md  PHASE_2_FOUNDATION.md  PHASE_3_FEATURES.md  PHASE_4_MODELS.md  PHASE_5_SERVING.md
retrosheet/: __init__.py  archive.py  event.py  game.py  helpers.py  parser.py
scripts/: __init__.py  add_sql_headers.py  add_table_comments.py  agent_adapter.py  analyze_pa_models.py  analyze_pa_outcome_calibration.py  apply_accurate_headers.py  backup_procedures.sh  backup_sql_files.sh  benchmark_queries.py  benchmark_report.py  bootstrap_system.py  build_pitch_engineered_features.py  check_extensions.py  check_model_status.py  complete_mlb_ingestion.sh  convert_block_headers.py  demo_advanced_modeling.py  demo_chatbot_integration.py  demo_full_system.py  demonstrate_enhanced_model.py  download_baseball_savant.py  download_lahman_data.py  download_missing_2023.py  download_mlb_bulk.py  download_statcast_pitch_level.py  e2e_test.sh  edgeforge_alerts.py  edgeforge_dashboard.py  edgeforge_enhanced_features.py  edgeforge_status.py  evaluate_model_calibration.py  extract_pitches_from_snapshots.py  fetch_espn_mlb.py  fetch_mlb_reference_data.py  fetch_mlb_schedule.py  fetch_weather.py  fix_repo_issues.sh  generate_historical_pa_predictions.py  ingest_all_external.sh  (+53 more)
skills/: prisma-postgres-setup
sql/: 010_core_games_events.sql  020_plate_appearances.sql  030_reference_metadata.sql  050_feature_marts.sql  070_temporal_and_production_marts.sql  075_interface_workflows.sql  076_plate_appearance_outcome_model.sql  077_pitch_sequence_model.sql  078_plate_appearance_outcome_grouped.sql  079_probability_evaluation_reports.sql  080_mlb_pbp.sql  081_probability_calibration_artifacts.sql  082_count_state_feature_marts.sql  083_live_prediction_logging.sql  083_pitch_count_statistics.sql  084_pa_predictions_table.sql  085_mlb_team_resolution.sql  090_mlb_live_data.sql  100_bridge_tables.sql  110_live_core_tables.sql  122_live_pa_feature_parity.sql  125_market_snapshot_tables.sql  126_model_edge_comparison.sql  130_analysis_views.sql  141_performance_indexes.sql  142_optimized_functions.sql  143_advanced_optimizations.sql  144_live_plate_appearances.sql  145_mlb_historical_schema.sql  150_mlb_data_completeness.sql  150_model_registry.sql  200_external_data.sql  212_fangraphs_raw.sql  220_espn_schema.sql  300_bridge_schema.sql  500_features_win_expectancy.sql  501_features_leverage_index.sql  502_features_matchup.sql  503_features_rolling_form.sql  602_models_pa_outcome.sql  (+1 more)
sql_archive/: 110_live_core_tables_DUPLICATE.sql
tests/: __init__.py  conftest.py  run_tests.py  test_cli_integration.py  test_config.py  test_engineered_features_population.py  test_ensemble.py  test_infrastructure.py  test_integration.py  test_langchain_agent.py  test_mlb_predict_integration.py  test_pitch_model_calibration.py  test_pitch_modeling_pipeline.py  test_rag_end_to_end.py  test_results.py  test_train_models.py  test_unified_scheduler.py  test_unified_scheduler_simple.py
(+801 files in other folders)
