[project]
name = "retrosheet"
version = "0.1.0"
description = "Baseball prediction warehouse from Retrosheet historical data"
authors = [
  { name = "Retrosheet Project Contributors" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "httpx>=0.27",
  "joblib>=1.3.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "scikit-learn>=1.5",
  "sqlalchemy>=2.0",
  "urllib3>=2.0.0",
  "xgboost>=2.1",
  "llama-index>=0.10.0",
  "prometheus-client>=0.19.0",
  "MLB-StatsAPI>=0.5.0",
  "pybaseball>=2.2.7",
  "lightgbm>=4.6.0",
  "catboost>=1.2.10",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "black>=24.0",
  "isort>=5.13",
]

[tool.uv]
resolution = "highest"
prerelease = "allow"
python-preference = "only-managed"
python-downloads = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"

# Enable comprehensive rule sets
# E/W - pycodestyle errors/warnings
# F - Pyflakes
# I - isort (import sorting)
# N - pep8-naming
# B - flake8-bugbear
# C4 - flake8-comprehensions
# SIM - flake8-simplify
# ARG - flake8-unused-arguments
# UP - pyupgrade (Python upgrade checks)
# PERF - perflint (performance anti-patterns)
# RUF - Ruff-specific rules
select = [
    "E", "W", "F", "I", "N", "B", "C4", "SIM", "ARG",
    "UP", "PERF", "RUF"
]

# Ignored rules
ignore = [
    "E501",     # Line too long (handled by formatter)
    "W191",     # Indentation contains tabs (handled by formatter)
    "E111",     # Indentation is not a multiple of 4 (handled by formatter)
    "E114",     # Indentation is not a multiple of 4 (comment)
    "N806",     # Variable in function should be lowercase (allow for ML models)
    "N803",     # Argument name should be lowercase (allow for common ML patterns)
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
# Scripts can have imports at top level and print statements
"scripts/**/*.py" = ["E402", "T201"]
# Test files can have magic numbers and assertions
"tests/**/*.py" = ["PLR2004", "S101"]
# Notebooks/jupyter can have certain patterns
"**/*.ipynb" = ["E402", "T201"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "sqlfluff>=4.1.0",
]
