[project]
name = "retrosheet"
version = "0.1.0"
description = "Baseball prediction warehouse from Retrosheet historical data"
authors = [
  { name = "Retrosheet Project Contributors" }
]
readme = "README.md"
requires-python = ">=3.10,<3.12"
dependencies = [
  "httpx>=0.27",
  "joblib>=1.3.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "psycopg2-binary>=2.9",
  "python-dotenv>=1.0",
  "scikit-learn>=1.5",
  "sqlalchemy>=2.0",
  "urllib3>=2.0.0",
  "xgboost>=2.1",
  "llama-index>=0.10.0",
  "prometheus-client>=0.19.0",
  "MLB-StatsAPI>=0.5.0",
  "pybaseball>=2.2.7",
  "lightgbm>=4.6.0",
  "catboost>=1.2.10",
  "psycopg>=3.3.3",
  "psycopg2>=2.9.12",
  "letta-client>=1.10.3",
  "aider-chat>=0.86.2",
  # CLI and core framework (Phase 1)
  "typer>=0.12.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "structlog>=24.0",
  "tenacity>=8.0",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.10",
  "black>=24.0",
  "isort>=5.13",
]

[project.scripts]
mlb-predict = "mlb_predict.cli.main:main"
baseball = "baseball.cli:app"

[tool.uv]
resolution = "highest"
prerelease = "allow"
python-preference = "only-managed"
python-downloads = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["scripts/archive"]

[tool.ruff.lint]
# Enable ALL comprehensive rule sets for maximum code quality
select = [
    # Core pycodestyle
    "E", "W",
    # Pyflakes
    "F",
    # isort (import sorting)
    "I",
    # pep8-naming
    "N",
    # flake8-bugbear (common bugs)
    "B",
    # flake8-comprehensions
    "C4",
    # flake8-simplify
    "SIM",
    # flake8-unused-arguments
    "ARG",
    # pyupgrade (Python upgrade checks)
    "UP",
    # perflint (performance anti-patterns)
    "PERF",
    # Ruff-specific rules
    "RUF",
    # flake8-builtins (shadowing builtins)
    "A",
    # flake8-async (async issues)
    "ASYNC",
    # flake8-commas
    "COM",
    # flake8-datetimez (timezone aware)
    "DTZ",
    # flake8-errmsg (better error messages)
    "EM",
    # eradicate (commented out code)
    "ERA",
    # flake8-executable
    "EXE",
    # flake8-future-annotations
    "FA",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-logging
    "LOG",
    # flake8-logging-format
    "G",
    # pygrep-hooks
    "PGH",
    # flake8-pie
    "PIE",
    # flake8-pytest-style
    "PT",
    # flake8-quotes
    "Q",
    # flake8-return
    "RET",
    # flake8-raise
    "RSE",
    # flake8-self
    "SLF",
    # flake8-slots (performance)
    "SLOT",
    # flake8-debugger (breakpoint)
    "T10",
    # flake8-print
    "T20",
    # flake8-type-checking
    "TC",
    # flake8-todos
    "TD",
    # tryceratops (exception handling)
    "TRY",
    # flake8-annotations
    "ANN",
    # flake8-bandit (security)
    "S",
    # pydocstyle
    "D",
    # flake8-no-pep420 (implicit namespace packages)
    "INP",
    # flake8-gettext
    "INT",
    # flake8-boolean-trap
    "FBT",
    # flake8-unused-imports (from C90)
    "F401",
    # mccabe (complexity)
    "C90",
]

# Ignored rules - only disable what's truly problematic for this codebase
ignore = [
    # Formatting handled by formatter
    "E501",     # Line too long
    "W191",     # Indentation contains tabs
    "E111",     # Indentation not multiple of 4
    "E114",     # Indentation not multiple of 4 (comment)
    # Naming conventions - ML/data science patterns need flexibility
    "N806",     # Variable in function should be lowercase (X, y common in ML)
    "N803",     # Argument name should be lowercase
    "N812",     # Lowercase imported as non-lowercase
    # Docstrings - can be strict later
    "D100",     # Missing docstring in public module
    "D104",     # Missing docstring in public package
    "D107",     # Missing docstring in __init__
    "D203",     # 1 blank line before class docstring
    "D213",     # Multi-line docstring summary should start at second line
    "D406",     # Section name should end with newline
    "D407",     # Section name underlines
    "D413",     # Missing blank line after last section
    # Annotations - gradual adoption
    "ANN401",   # Dynamically typed expressions (Any) disallowed
    # Security - SQL in this project is parameterized via SQLAlchemy
    "S608",     # Hardcoded SQL (we use SQLAlchemy/SQL files)
    # TODO/FIXME allowed during development
    "TD003",    # Missing issue link on TODO
    "FIX002",   # Line contains TODO
    # Print statements allowed in scripts
    "T201",     # Print found
    # Allow broad except in certain cases (retry logic)
    "BLE001",   # Blind except
    "TRY002",   # Raise vanilla class
    "TRY003",   # Avoid specifying long messages outside exception class
    # Allow commented out code during development
    "ERA001",   # Commented out code
    # Allow implicit string concatenation (sometimes cleaner)
    "ISC003",   # Explicitly concatenated string should be implicit
    # Allow boolean positional args (common in data science APIs)
    "FBT001",   # Boolean positional arg in function definition
    "FBT002",   # Boolean default value in function definition
    "FBT003",   # Boolean positional value in function call
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint.isort]
known-first-party = ["retrosheet"]
known-local-folder = ["scripts", "sql", "models"]
combine-as-imports = true
split-on-trailing-comma = true
lines-after-imports = 2

[tool.ruff.lint.pydocstyle]
convention = "google"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.mccabe]
max-complexity = 12

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"
multiline-quotes = "double"
docstring-quotes = "double"

[tool.ruff.lint.per-file-ignores]
# Scripts can have certain patterns
"scripts/**/*.py" = [
    "E402",     # Module level import not at top
    "T201",     # Print statements
    "D",        # Docstrings not required
    "ANN",      # Annotations not required
    "S101",     # Assert statements
    "INP001",   # Implicit namespace package
]
# Test files
"tests/**/*.py" = [
    "S101",     # Assert statements (pytest uses asserts)
    "PLR2004",  # Magic value used in comparison
    "D",        # Docstrings not required
    "ANN",      # Annotations not required
    "INP001",   # Implicit namespace package
]
# Notebooks/jupyter
"**/*.ipynb" = [
    "E402",     # Module level import not at top
    "T201",     # Print statements
    "D",        # Docstrings not required
    "ANN",      # Annotations not required
]
# SQL files (if any Python embedded)
"sql/**/*.py" = [
    "D",
    "ANN",
    "INP001",
]
# Model training scripts (more permissive)
"scripts/pitch_models/**/*.py" = [
    "D",
    "ANN201",   # Missing return type
    "PLR0913",  # Too many arguments
    "PLR0915",  # Too many statements
]
# API routes (need proper annotations)
"baseball-chatbot-ui/app/api/**/*.py" = [
    "D",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-v --cov=. --cov-report=term-missing"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
    "sqlfluff>=4.1.0",
]
